--- a/app/about.html
+++ b/app/about.html
@@ -25,7 +25,7 @@
 		<div class="header-top__wrapper">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-8">
+					<div class="col-lg-8 col-md-10">
 						<div class="header-top__left">
 							<ul class="nav">
 								<li class="nav__item">
@@ -67,7 +67,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-md-2 col-md-offset-2">
+					<div class="col-lg-2 col-lg-offset-2 col-md-2">
 						<div class="header-top__right">
 							<ul class="social">
 								<li class="social__item">
@@ -112,6 +112,55 @@
 								<a href="#" class="call-the-master__button">
 									вызвать мастера
 								</a>
+							</div>
+							<div class="mob-header">
+								<div class="mob-menu">
+									<i class="mob-menu__icon"></i>
+									<ul class="nav nav-toggle">
+										<li class="nav__item">
+											<i class="nav__icon nav__icon-1"></i>
+											<a href="#" class="nav__link">
+												Главная
+											</a>
+										</li>
+										<li class="nav__item">
+											<i class="nav__icon nav__icon-2"></i>
+											<a href="#" class="nav__link">
+												О компании
+											</a>
+										</li>
+										<li class="nav__item">
+											<i class="nav__icon nav__icon-3"></i>
+											<a href="#" class="nav__link">
+												Каталог
+											</a>
+										</li>
+										<li class="nav__item">
+											<i class="nav__icon nav__icon-4"></i>
+											<a href="#" class="nav__link">
+												Прайсы
+											</a>
+										</li>
+										<li class="nav__item">
+											<i class="nav__icon nav__icon-5"></i>
+											<a href="#" class="nav__link">
+												Полезные статьи
+											</a>
+										</li>
+										<li class="nav__item">
+											<i class="nav__icon nav__icon-6"></i>
+											<a href="#" class="nav__link">
+												Контакты
+											</a>
+										</li>
+									</ul>
+								</div>
+								<div class="mob-search">
+									<i class="mob-search__icon"></i>
+								</div>
+								<div class="mob-arrow">
+									<i class="mob-arrow__icon"></i>
+								</div>
 							</div>
 						</div>
 					</div>
