--- a/app/about.html
+++ b/app/about.html
@@ -168,6 +168,390 @@
 			</div>
 		</div>
 	</header>
+	<div class="content">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="content__wrapper">
+						<div class="sidebar">
+							<b class="sidebar__title">
+								<span class="sidebar__title-name">Навигация</span>
+							</b>
+							<div class="sidebar-menu">
+								<div class="sidebar-menu__title">
+									<span class="sidebar-menu__title-name">Видеонаблюдение</span>
+								</div>
+								<ul class="sidebar-menu__wrapper">
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Монтаж систем видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Комплекты видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Камеры видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Видеорегистраторы
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Беспроводное видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											IP видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											AHD видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											В магазине
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											В офисе
+										</a>
+									</li>
+								</ul>
+							</div>
+							<div class="sidebar-menu">
+								<div class="sidebar-menu__title">
+									<span class="sidebar-menu__title-name">
+										Электромагнитные замки
+									</span>
+								</div>
+								<ul class="sidebar-menu__wrapper">
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Монтаж систем видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Комплекты видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Камеры видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Видеорегистраторы
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Беспроводное видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											IP видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											AHD видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											В магазине
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											В офисе
+										</a>
+									</li>
+								</ul>
+							</div>
+							<div class="sidebar-menu">
+								<div class="sidebar-menu__title">
+									<span class="sidebar-menu__title-name">
+										Домофоны
+									</span>
+								</div>
+								<ul class="sidebar-menu__wrapper">
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Монтаж систем видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Комплекты видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Камеры видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Видеорегистраторы
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Беспроводное видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											IP видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											AHD видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											В магазине
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											В офисе
+										</a>
+									</li>
+								</ul>
+							</div>
+							<div class="sidebar-menu">
+								<div class="sidebar-menu__title">
+									<span class="sidebar-menu__title-name">
+										Контроль доступа
+									</span>
+								</div>
+								<ul class="sidebar-menu__wrapper">
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Монтаж систем видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Комплекты видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Камеры видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Видеорегистраторы
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Беспроводное видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											IP видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											AHD видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											В магазине
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											В офисе
+										</a>
+									</li>
+								</ul>
+							</div>
+							<div class="sidebar-menu">
+								<div class="sidebar-menu__title">
+									<span class="sidebar-menu__title-name">
+										Сигнализация
+									</span>
+								</div>
+								<ul class="sidebar-menu__wrapper">
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Монтаж систем видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Комплекты видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Камеры видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Видеорегистраторы
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Беспроводное видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											IP видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											AHD видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											В магазине
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											В офисе
+										</a>
+									</li>
+								</ul>
+							</div>
+							<div class="sidebar-menu">
+								<div class="sidebar-menu__title">
+									<span class="sidebar-menu__title-name">
+										Дверные замки
+									</span>
+								</div>
+								<ul class="sidebar-menu__wrapper">
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Монтаж систем видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Комплекты видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Камеры видеонаблюдения
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Видеорегистраторы
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											Беспроводное видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											IP видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											AHD видеонаблюдение
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											В магазине
+										</a>
+									</li>
+									<li class="sidebar-menu__item">
+										<a href="#" class="sidebar-menu__link">
+											В офисе
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="main-content">
+							<ul class="path">
+								<li class="path__item">
+									<a href="#" class="path__link">
+										Главная
+									</a>
+								</li>
+								<li class="path__item">
+									<a href="#" class="path__link">
+										О компании
+									</a>
+								</li>
+							</ul>
+							<h1 class="main-content__title">
+								О компании
+							</h1>
+							<div class="main-content__description">
+								<p class="main-content__description-p">
+									Часто бывает так, что к нам домой приходят абсолютно незнакомые люди, а бывает, так что и «знакомые»,<br>без предупреждения, в тот момент когда хочется отдохнуть от общения. Иногда наши дети или престарелые родители остаются дома одни, либо все время живут одни. Как обезопасить их от нежелательных визитеров? Ответ прост - видеодомофон.
+								</p>
+								<p class="main-content__description-p">
+									Все, что нам необходимо для квартиры, частного дома либо офиса - это видеодомофонная система, состоящая из монитора, вызывной панели и кабеля, соединяющего эти элементы. Видеодомофоны бывают черно-белые и цветные, с трубкой и без нее, рассчитанные на 2,4,6 вызывных панелей либо камер, с функцией дозвона на городской телефонный номер, с функцией памяти и записи снятых кадров на SD-карту, с функцией открытия электрозамка.
+								</p>
+								<p class="main-content__description-p">
+									Часто бывает так, что к нам домой приходят абсолютно незнакомые люди, а бывает, так что и «знакомые»,<br>без предупреждения, в тот момент когда хочется отдохнуть от общения. Иногда наши дети или престарелые родители остаются дома одни, либо все время живут одни. Как обезопасить их от нежелательных визитеров? Ответ прост - видеодомофон.
+								</p>
+								<p class="main-content__description-p">
+									Все, что нам необходимо для квартиры, частного дома либо офиса - это видеодомофонная система, состоящая из монитора, вызывной панели и кабеля, соединяющего эти элементы. Видеодомофоны бывают черно-белые и цветные, с трубкой и без нее, рассчитанные на 2,4,6 вызывных панелей либо камер, с функцией дозвона на городской телефонный номер, с функцией памяти и записи снятых кадров на SD-карту, с функцией открытия электрозамка.
+								</p>
+							</div>
+							<div class="consultation">
+								<b class="consultation__title">Получить консультацию</b>
+								<p class="consultation__description">
+									Оставьте заявку и наш специалист свяжется с Вами и ответит на все Ваши вопросы!
+								</p>
+								<div class="consultation__row">
+									<input type="text" class="consultation__input consultation__input-left" placeholder="Ваше имя">
+									<input type="text" class="consultation__input consultation__input-right" placeholder="Ваш телефон">
+								</div>
+								<textarea name="" id="" cols="30" rows="10" class="consultation__comment-area" placeholder="Ваш комментарий"></textarea>
+								<div class="consultation__button-wrapper">
+									<button type="submit" class="consultation__button">
+									Отправить
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- Scripts -->
 	<script type="text/javascript" src="libs/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
