--- a/app/about.html
+++ b/app/about.html
@@ -1180,7 +1180,7 @@
 							</li>
 						</ul>
 					</div>
-					<div class="f-menu__wrapper">
+					<div class="f-menu__wrapper f-menu__wrapper-last">
 						<b class="f-menu__title">
 							О компании
 						</b>
@@ -1201,6 +1201,21 @@
 								</a>
 							</li>
 						</ul>
+					</div>
+					<div class="f-menu__wrapper hide-element-w">
+						<div class="logo logo-footer hide-element-f">
+							<a href="#" class="logo__link">
+								<img src="img/logo-f.png" alt="" class="logo__img">
+							</a>
+						</div>
+						<div class="phone footer__phone hide-element-l">
+							<div class="phone__number">
+								8 (800) 464-33-33
+							</div>
+							<a href="#" class="phone__email">
+								info@rekoon.ru
+							</a>
+						</div>
 					</div>
 				</div>
 				<div class="phone footer__phone">
