--- a/app/about.html
+++ b/app/about.html
@@ -15,6 +15,7 @@
 	<!-- Styles -->
 	<link rel="stylesheet" href="libs/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="libs/magnific-popup/dist/magnific-popup.css">
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/media.css">
@@ -93,7 +94,7 @@
 						</form>
 					</div>
 					<div class="call-the-master">
-						<a href="#" class="call-the-master__button">
+						<a href="#back-call" class="call-the-master__button">
 							вызвать мастера
 						</a>
 					</div>
@@ -149,6 +150,12 @@
 						</div>
 						<div class="mob-search">
 							<i class="mob-search__icon"></i>
+							<div class="search-mob">
+								<form action="" class="search__form">
+									<input type="text" placeholder="Поиск по сайту" class="search__input">
+									<button type="search" class="search__button"></button>
+								</form>
+							</div>
 						</div>
 						<div class="mob-arrow">
 							<i class="mob-arrow__icon"></i>
@@ -1231,13 +1238,38 @@
 		<div class="footer__bootom">
 			<div class="content-wrapper">
 				<div class="copyright">
-					&copy; 2016. Visio-plus. Все права защищены.
+					<div class="copyright__left">
+						&copy; 2016. Visio-plus. Все права защищены.
+					</div>
+					<div class="copyright__right">
+						Разработано: <a href="#" class="copyright__right-link">REKOON</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</footer>
+	<div class="pop-up mfp-hide" id="back-call">
+		<div class="pop-up__wrapper">
+			<b class="pop-up__title">
+				ОСТАВЬТЕ ЗАЯВКу
+			</b>
+			<p class="pop-up__p">
+				Наш менеджер свяжется с Вами<br>в ближайшее время
+			</p>
+			<form action="">
+				<input type="text" placeholder="Ваше имя" class="pop-up__input pop-up__input-av">
+				<input type="text" placeholder="Ваш телефон" class="pop-up__input pop-up__input-ph">
+				<div class="pop-up__button-wrapper">
+					<button type="submit" class="pop-up__button">
+						Отправить
+					</button>
+				</div>
+			</form>
+		</div>
+	</div>
 	<!-- Scripts -->
 	<script type="text/javascript" src="libs/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="libs/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<!-- End_Scripts -->
 </body>
