--- a/app/about.html
+++ b/app/about.html
@@ -14,7 +14,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Styles -->
 	<link rel="stylesheet" href="libs/bootstrap/bootstrap.min.css">
-	<link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="libs/magnific-popup/dist/magnific-popup.css">
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.css">
@@ -159,6 +158,25 @@
 						</div>
 						<div class="mob-arrow">
 							<i class="mob-arrow__icon"></i>
+							<div class="mob-arow__wrapper">
+								<div class="pop-up__wrapper">
+									<b class="pop-up__title">
+										Оставте заявку
+									</b>
+									<p class="pop-up__p">
+										Наш менеджер свяжется с Вами<br>в ближайшее время
+									</p>
+									<form action="">
+										<input type="text" placeholder="Ваше имя" class="pop-up__input pop-up__input-av">
+										<input type="text" placeholder="Ваш телефон" class="pop-up__input pop-up__input-ph">
+										<div class="pop-up__button-wrapper">
+											<button type="submit" class="pop-up__button">
+												Отправить
+											</button>
+										</div>
+									</form>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
