--- a/app/article.html
+++ b/app/article.html
@@ -14,7 +14,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Styles -->
 	<link rel="stylesheet" href="libs/bootstrap/bootstrap.min.css">
-	<link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="libs/magnific-popup/dist/magnific-popup.css">
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/media.css">
@@ -1303,7 +1303,12 @@
 		<div class="footer__bootom">
 			<div class="content-wrapper">
 				<div class="copyright">
-					&copy; 2016. Visio-plus. Все права защищены.
+					<div class="copyright__left">
+						&copy; 2016. Visio-plus. Все права защищены.
+					</div>
+					<div class="copyright__right">
+						Разработано: <a href="#" class="copyright__right-link">REKOON</a>
+					</div>
 				</div>
 			</div>
 		</div>
