--- a/app/about.html
+++ b/app/about.html
@@ -1122,16 +1122,16 @@
 						О компании
 					</h1>
 					<div class="main-content__description">
-						<p class="main-content__description-p">
+						<p>
 							Часто бывает так, что к нам домой приходят абсолютно незнакомые люди, а бывает, так что и «знакомые»,<br>без предупреждения, в тот момент когда хочется отдохнуть от общения. Иногда наши дети или престарелые родители остаются дома одни, либо все время живут одни. Как обезопасить их от нежелательных визитеров? Ответ прост - видеодомофон.
 						</p>
-						<p class="main-content__description-p">
+						<p>
 							Все, что нам необходимо для квартиры, частного дома либо офиса - это видеодомофонная система, состоящая из монитора, вызывной панели и кабеля, соединяющего эти элементы. Видеодомофоны бывают черно-белые и цветные, с трубкой и без нее, рассчитанные на 2,4,6 вызывных панелей либо камер, с функцией дозвона на городской телефонный номер, с функцией памяти и записи снятых кадров на SD-карту, с функцией открытия электрозамка.
 						</p>
-						<p class="main-content__description-p">
+						<p>
 							Часто бывает так, что к нам домой приходят абсолютно незнакомые люди, а бывает, так что и «знакомые»,<br>без предупреждения, в тот момент когда хочется отдохнуть от общения. Иногда наши дети или престарелые родители остаются дома одни, либо все время живут одни. Как обезопасить их от нежелательных визитеров? Ответ прост - видеодомофон.
 						</p>
-						<p class="main-content__description-p">
+						<p>
 							Все, что нам необходимо для квартиры, частного дома либо офиса - это видеодомофонная система, состоящая из монитора, вызывной панели и кабеля, соединяющего эти элементы. Видеодомофоны бывают черно-белые и цветные, с трубкой и без нее, рассчитанные на 2,4,6 вызывных панелей либо камер, с функцией дозвона на городской телефонный номер, с функцией памяти и записи снятых кадров на SD-карту, с функцией открытия электрозамка.
 						</p>
 					</div>
@@ -1288,6 +1288,7 @@
 	<!-- Scripts -->
 	<script type="text/javascript" src="libs/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="libs/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
+	<script type="text/javascript" src="libs/mask/jquery.maskedinput.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<!-- End_Scripts -->
 </body>
