--- a/app/cart.html
+++ b/app/cart.html
@@ -1158,10 +1158,10 @@
 								<b class="main-content__card-info-ds-title">
 									Описание
 								</b>
-								<p class="main-content__description-p">
+								<p>
 									Сделать мир безопаснее, сделав его совершеннее и гуманнее. Для этого мы развиваемся сами<br>и пропагандируем идеалы взаимоуважения, ответственности, лояльности и эмпатии в общении и работе.<br>Мы предлагаем лучшие технические решения в сфере безопасности, чтобы ускорить процесс трансформации общества и компенсировать существующую в нём дисгармонию.
 								</p>
-								<p class="main-content__description-p">
+								<p>
 									Эти устройства выполнены также из приёмника и передатчика, однако генерируются не ИК-лучи,<br>а СВЧ-сигнал. С помощью радиолуча формируется зона обнаружения в виде эллипсоида. Ограничения, которые актуальны для лучевых датчиков, имеют место быть и при эксплуатации радиолучевых систем. Однако эти приборы «инспектируют» более широкую зону обнаружения.
 								</p>
 							</div>
@@ -1322,6 +1322,7 @@
 	<script type="text/javascript" src="libs/slick/slick.js"></script>
 	<script type="text/javascript" src="js/prod-slider.js"></script>
 	<script type="text/javascript" src="libs/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
+	<script type="text/javascript" src="libs/mask/jquery.maskedinput.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<!-- End_Scripts -->
 </body>
