--- a/app/main.html
+++ b/app/main.html
@@ -1154,18 +1154,18 @@
 						О компании
 					</h1>
 					<div class="main-content__description">
-						<p class="main-content__description-p">
+						<p>
 							Сделать мир безопаснее, сделав его совершеннее и гуманнее. Для этого мы развиваемся сами<br>и пропагандируем идеалы взаимоуважения, ответственности, лояльности и эмпатии в общении и работе.<br>Мы предлагаем лучшие технические решения в сфере безопасности, чтобы ускорить процесс трансформации общества и компенсировать существующую в нём дисгармонию.
 						</p>
-						<p class="main-content__description-p">
+						<p>
 							Эти устройства выполнены также из приёмника и передатчика, однако генерируются не ИК-лучи,<br>а СВЧ-сигнал. С помощью радиолуча формируется зона обнаружения в виде эллипсоида. Ограничения, которые актуальны для лучевых датчиков, имеют место быть и при эксплуатации радиолучевых систем. Однако эти приборы «инспектируют» более широкую зону обнаружения.
 						</p>
 						<div class="main-content__more-hidden">
 							<div class="main-content__description main-content__more-d">
-								<p class="main-content__description-p">
+								<p>
 									Сделать мир безопаснее, сделав его совершеннее и гуманнее. Для этого мы развиваемся сами<br>и пропагандируем идеалы взаимоуважения, ответственности, лояльности и эмпатии в общении и работе.<br>Мы предлагаем лучшие технические решения в сфере безопасности, чтобы ускорить процесс трансформации общества и компенсировать существующую в нём дисгармонию.
 								</p>
-								<p class="main-content__description-p">
+								<p>
 									Эти устройства выполнены также из приёмника и передатчика, однако генерируются не ИК-лучи,<br>а СВЧ-сигнал. С помощью радиолуча формируется зона обнаружения в виде эллипсоида. Ограничения, которые актуальны для лучевых датчиков, имеют место быть и при эксплуатации радиолучевых систем. Однако эти приборы «инспектируют» более широкую зону обнаружения.
 								</p>
 							</div>
@@ -1180,32 +1180,32 @@
 						</div>
 						<ul class="main-content__catalog main-content__catalog-glav">
 							<li class="main-content__catalog-item">
-								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/1.png);">
+								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/1.jpg);">
 									<span class="main-content__catalog-text">видео-<br>наблюдение</span>
 								</a>
 							</li>
 							<li class="main-content__catalog-item">
-								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/1.png);">
+								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/2.jpg);">
 									<span class="main-content__catalog-text">Электронные<br>замки</span>
 								</a>
 							</li>
 							<li class="main-content__catalog-item">
-								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/1.png);">
+								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/3.jpg);">
 									<span class="main-content__catalog-text">Домофоны</span>
 								</a>
 							</li>
 							<li class="main-content__catalog-item">
-								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/1.png);">
+								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/4.jpg);">
 									<span class="main-content__catalog-text">Контроль доступа</span>
 								</a>
 							</li>
 							<li class="main-content__catalog-item">
-								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/1.png);">
+								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/5.jpg);">
 									<span class="main-content__catalog-text">Сигна-<br>лизация</span>
 								</a>
 							</li>
 							<li class="main-content__catalog-item">
-								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/1.png);">
+								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/6.jpg);">
 									<span class="main-content__catalog-text">Дверные замки</span>
 								</a>
 							</li>
@@ -1419,6 +1419,9 @@
 	<!-- Scripts -->
 	<script type="text/javascript" src="libs/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="libs/slick/slick.js"></script>
+	<script type="text/javascript" src="libs/bx-slider/jquery.bxslider.min.js"></script>
+	<script type="text/javascript" src="libs/bx-slider/"></script>
+	<script type="text/javascript" src="libs/mask/jquery.maskedinput.min.js"></script>
 	<script type="text/javascript" src="js/slider.js"></script>
 	<script type="text/javascript" src="js/bslider.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
