--- a/app/catalog.html
+++ b/app/catalog.html
@@ -1088,6 +1088,7 @@
 						</li>
 						<li class="path__item">
 							<a href="#" class="path__link">
+								Каталог
 							</a>
 						</li>
 					</ul>
@@ -1095,42 +1096,42 @@
 						Каталог
 					</h1>
 					<div class="main-content__description">
-						<p class="main-content__description-p">
+						<p>
 							Сделать мир безопаснее, сделав его совершеннее и гуманнее. Для этого мы развиваемся сами<br>и пропагандируем идеалы взаимоуважения, ответственности, лояльности и эмпатии в общении и работе.<br>Мы предлагаем лучшие технические решения в сфере безопасности, чтобы ускорить процесс трансформации общества и компенсировать существующую в нём дисгармонию.
 						</p>
 						<ul class="main-content__catalog">
 							<li class="main-content__catalog-item">
-								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/1.png);">
+								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/1.jpg);">
 									<span class="main-content__catalog-text">видео-<br>наблюдение</span>
 								</a>
 							</li>
 							<li class="main-content__catalog-item">
-								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/1.png);">
+								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/2.jpg);">
 									<span class="main-content__catalog-text">Электронные<br>замки</span>
 								</a>
 							</li>
 							<li class="main-content__catalog-item">
-								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/1.png);">
+								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/3.jpg);">
 									<span class="main-content__catalog-text">Домофоны</span>
 								</a>
 							</li>
 							<li class="main-content__catalog-item">
-								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/1.png);">
+								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/4.jpg);">
 									<span class="main-content__catalog-text">Контроль доступа</span>
 								</a>
 							</li>
 							<li class="main-content__catalog-item">
-								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/1.png);">
+								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/5.jpg);">
 									<span class="main-content__catalog-text">Сигна-<br>лизация</span>
 								</a>
 							</li>
 							<li class="main-content__catalog-item">
-								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/1.png);">
+								<a href="#" class="main-content__catalog-link" style="background-image: url(img/catalog/6.jpg);">
 									<span class="main-content__catalog-text">Дверные замки</span>
 								</a>
 							</li>
 						</ul>
-						<p class="main-content__description-p">
+						<p>
 							Эти устройства выполнены также из приёмника и передатчика, однако генерируются не ИК-лучи,<br>а СВЧ-сигнал. С помощью радиолуча формируется зона обнаружения в виде эллипсоида. Ограничения, которые актуальны для лучевых датчиков, имеют место быть и при эксплуатации радиолучевых систем.<br>Однако эти приборы «инспектируют» более широкую зону обнаружения.
 						</p>
 					</div>
@@ -1262,6 +1263,8 @@
 	</footer>
 	<!-- Scripts -->
 	<script type="text/javascript" src="libs/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="libs/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
+	<script type="text/javascript" src="libs/mask/jquery.maskedinput.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<!-- End_Scripts -->
 </body>
