--- a/app/cart.html
+++ b/app/cart.html
@@ -1110,7 +1110,8 @@
 					<div class="main-content__description">
 						<div class="main-content__card">
 							<div class="main-content__card-slider">
-								<div class="sl1">
+								<img class="test" src="img/scr.jpg" alt="">
+								<!--<div class="sl1">
 									<div class="sl1__slide">
 										<img src="img/prod-slider/1.jpg" alt="">
 									</div>
@@ -1131,7 +1132,7 @@
 									<div class="sl2__slide">
 										<img src="img/prod-slider/1-min.jpg" alt="">
 									</div>
-								</div>
+								</div>-->
 							</div>
 							<div class="main-content__card-info">
 								<div class="main-content__card-info-price">
@@ -1321,7 +1322,7 @@
 	<script type="text/javascript" src="libs/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="libs/slick/slick.js"></script>
 	<script type="text/javascript" src="js/prod-slider.js"></script>
-	<script type="text/javascript" src="libs/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
+	<!--<script type="text/javascript" src="libs/magnific-popup/dist/jquery.magnific-popup.min.js"></script>-->
 	<script type="text/javascript" src="libs/mask/jquery.maskedinput.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<!-- End_Scripts -->
